<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Test1Activity" >

<!-- PREGUNTA1 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta1" />
    <RadioGroup 
        android:id="@+id/GrbGrupo1"
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <RadioButton 
	        android:id="@+id/G1Opcion1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/opcion1"/>
	    <RadioButton 	        
	        android:id="@+id/G1Opcion2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/opcion2" 
	        android:checked="true"/>
	  </RadioGroup>
    
 <!-- PREGUNTA2 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta2" />
    <RadioGroup 
        android:id="@+id/GrbGrupo2"
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <RadioButton 	        
	        android:id="@+id/G2Opcion1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p2opcion1" />
	    <RadioButton  
	        android:id="@+id/G2Opcion2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p2opcion2"
	        android:checked="true" />
    </RadioGroup>
	    
    
    <!-- PREGUNTA3-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta3"
         />
    <RadioGroup 
        android:id="@+id/GrbGrupo3"
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <RadioButton  
	        android:id="@+id/G3Opcion1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p3opcion1" />
	    <RadioButton  
	        android:id="@+id/G3Opcion2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p3opcion2"
	        android:checked="true" />
    </RadioGroup>
    
     
    <!-- PREGUNTA4-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta4" />
     <RadioGroup 
        android:id="@+id/GrbGrupo4"
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <RadioButton 	       
	        android:id="@+id/G4Opcion1"       
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p4opcion1" />
	    <RadioButton 
	        android:id="@+id/G4Opcion2" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p4opcion2" 
	        android:checked="true"/>

	</RadioGroup>
	    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="miClick"
        android:text="@string/BotonSiguiente" />

</LinearLayout>
